# mnist-mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  pipeline.yaml  predict.dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  run_pipeline.py  trainer.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
config/: default_config.yaml
config/experiment/: experiment1.yaml  experiment2.yaml  experiment3.yaml
configs/: train.yaml
configs/callbacks/: default.yaml
configs/data/: mnist.yaml
configs/model/: mnist_cnn.yaml  mnist_vae.yaml
configs/paths/: default.yaml
dockerfiles/: predict.dockerfile  predict_model.dockerfile  train_model.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mnist_mlops/: __init__.py  predict_model.py  register_model.py  run_experiment.py  train.py  train_model.py
mnist_mlops/data/: make_dataset.py
mnist_mlops/models/: __init__.py  model.py
src/: __init__.py  predict_model.py  register_model.py  score.py  train.py  train_encoder.py  train_hydra.py
src/data/: __init__.py  make_dataset.py
src/models/: cnn_model.py  encoder_model.py
src/models/components/: cnn.py
tests/: __init__.py  test_data.py  test_make_dataset.py  test_model.py
tests/config/: default_config.yaml
tests/config/experiment/: experiment1.yaml
